--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Data Visualizations Project</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Here are some Data Visualization projects that I created.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
