--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<!-- Call-to-Action Buttons -->
 							<ul class="actions" style="margin-top: 1.5em;">
 							  <li><a href="#one" class="button primary scrolly">Hire Me</a></li>
-							  <li><a href="assets/WendellFeria_CV.pdf" class="button scrolly" download>Download CV</a></li>
+							  <li><a href="assets/Feria, Wendell Alfred CV.pdf" class="button scrolly" download>Download CV</a></li>
 							</ul>
 						  </div>
 					  
